--- a/public/templates/todos.html
+++ b/public/templates/todos.html
@@ -3,8 +3,10 @@
         <div class="row-fluid">
             <div class="span5 offset2">
                 <form id="user-form" class="form-inline" method="put" action="/api/user">
-                    <h1>Hello <input type="text" class="input-medium" name="name" value="{{ name }}"
+                    {{#solidify "/api/user"}}
+                    <h1>Hello <input type="text" class="input-medium" name="name" value="{ { name } }"
                                      placeholder="User name"> !</h1>
+                    {{/solidify}}
                 </form>
             </div>
         </div>
@@ -12,7 +14,9 @@
             <h3>Your Todo List</h3>
 
             <div class="span8">
-                <div id="todo-list"></div>
+                <div id="todo-list">
+                    {{solidify-include "/templates/todo.html"}}
+                </div>
             </div>
         </div>
         <div class="row-fluid">
