--- a/public/templates/todos.html
+++ b/public/templates/todos.html
@@ -2,7 +2,8 @@
     <div class="offset2">
         <div class="row-fluid">
             <div class="span5 offset2">
-                <form id="user-form" class="form-inline" method="put" action="/api/user">
+                <form id="user-form" class="form-inline" method="post" action="/api/user?redirect=/">
+                    <input type="hidden" name="_method" value="put">
                     {{#solidify "/api/user"}}
                     <h1>Hello <input type="text" class="input-medium" name="name" value="{ { name } }"
                                      placeholder="User name"> !</h1>
@@ -21,7 +22,7 @@
         </div>
         <div class="row-fluid">
             <div class="span8 offset2">
-                <form id="new-todo-form" class="form-inline" method="post" action="/api/todos">
+                <form id="new-todo-form" class="form-inline" method="post" action="/api/todos?redirect=/">
                     <h3>Add a todo</h3>
                     <input type="text" class="input-xlarge" name="task" placeholder="Task">
                     <button type="submit" class="btn btn-primary">Create</button>
