--- a/public/templates/todos.html
+++ b/public/templates/todos.html
@@ -1,8 +1,13 @@
 <div class="row-fluid">
+    <div class="row-fluid">
+        <form id="toggle-js-form" class="form-inline text-center" method="get" action="/?noJs=true">
+            <button class="btn btn-large btn-primary span12" type="submit">{ {toggle} }</button>
+            </form>
+    </div>
     <div class="offset2">
         <div class="row-fluid">
             <div class="span5 offset2">
-                <form id="user-form" class="form-inline" method="post" action="/api/user?redirect=/">
+                <form id="user-form" class="form-inline" method="post" action="/api/user?redirect=/?noJs=true">
                     <input type="hidden" name="_method" value="put">
                     {{#solidify "/api/user"}}
                     <h1>Hello <input type="text" class="input-medium" name="name" value="{ { name } }"
@@ -22,7 +27,7 @@
         </div>
         <div class="row-fluid">
             <div class="span8 offset2">
-                <form id="new-todo-form" class="form-inline" method="post" action="/api/todos?redirect=/">
+                <form id="new-todo-form" class="form-inline" method="post" action="/api/todos?redirect=/?noJs=true">
                     <h3>Add a todo</h3>
                     <input type="text" class="input-xlarge" name="task" placeholder="Task">
                     <button type="submit" class="btn btn-primary">Create</button>
